wacc/test/golden/syntaxErr.basic.skpErr
# skip typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skp end


In test/wacc_examples/invalid/syntaxErr/basic/skpErr.wacc (line 11, column 11):
  unexpected "e"
  expected "[" or assignment
  >
  >begin skp end
             ^
  >